<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graphc"
    app:startDestination="@id/loginFragment2">

    <fragment
        android:id="@+id/loginFragment2"
        android:name="com.sebastian.laboratorio7.LoginFragment"
        android:label="@string/fargmentLoginlbl"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment2_to_singUpFragment"
            app:destination="@id/singUpFragment"
            />
        <action
            android:id="@+id/action_loginFragment2_to_updateFragment"
            app:destination="@id/updateFragment" />
    </fragment>
    <fragment
        android:id="@+id/perfilFragment"
        android:name="com.sebastian.laboratorio7.PerfilFragment"
        android:label="@string/fragmentPrfllbl"
        tools:layout="@layout/fragment_perfil" >
        <argument
            android:name="email"
            app:argType="string"
            android:defaultValue="Hola jcdurini@uvg.edu.gt, necesitamos que actualices tu perfil!"/>
        <action
            android:id="@+id/action_perfilFragment_to_loginFragment2"
            app:destination="@id/loginFragment2" />
    </fragment>
    <fragment
        android:id="@+id/singUpFragment"
        android:name="com.sebastian.laboratorio7.SingUpFragment"
        android:label="@string/fragmentSuplbl"
        tools:layout="@layout/fragment_sing_up" >
        <action
            android:id="@+id/action_singUpFragment_to_perfilFragment"
            app:destination="@id/perfilFragment" />
    </fragment>
    <fragment
        android:id="@+id/updateFragment"
        android:name="com.sebastian.laboratorio7.updateFragment"
        android:label="@string/fragmentupdtlbl"
        tools:layout="@layout/fragment_update" >
        <action
            android:id="@+id/action_updateFragment_to_perfilFragment"
            app:destination="@id/perfilFragment" />
        <argument
            android:name="email"
            app:argType="string" />
    </fragment>
</navigation>